Create topics on start

--- a/Домашние задания/08. Распределенные транзакции.md
+++ b/Домашние задания/08. Распределенные транзакции.md
@@ -11,6 +11,18 @@
 
 Если хотя бы один из пунктов не получилось сделать, заказ останавливается на определенном статусе  и ожидает дальнейшие действия от пользователя.
 
+## Архитектура сервиса
+
+Распределенные транзакции реализованы в виде Саги через MassTransit. Состояния хранятся в бд PostgreSQL, события ходят через Kafka.
+
+## Команда для запуска сервиса без сбора метрик
+
+helm upgrade --install lotus ./lotus --values lotus/values.yaml --set metrics.serviceMonitor.enabled=false
+
+### стартуем тунель чтобы подключаться к нашему сервису локально
+
+minikube tunnel
+
 ### У каждого заказа есть состояния
 1. ValidatingBilling:
    Заказ создан и ожидает проверки валидации от билинг системы. 
@@ -205,7 +217,7 @@ GET /notification
 10. Система доставки отвечает что, не может сейчас отправить заказ
 11. Имитируем, что сервис доставки принял заказ на доставки (отдельным методом в АПИ)
 ```
-PUT /stock/add?idSubscription=3&count=1
+PUT /delivery/accept?idOrder={{lotusOrderId}}
 ```
 Прочитаем оповещения
 ```
@@ -220,8 +232,10 @@ GET /notification
 
 Postman коллекция в этом папке
 Запустить коллекцию командой
-newman run OrderSaga.postman_collection.json
 
+```
+newman run OrderSaga.postman_collection.json --env-var "lotus=http://arch.homework"
+```
 Результат запуска коллекции
 ```
 ```
