--- a/Домашние задания/09. Идемпотентость и коммутативность API в HTTP и очередях.md
+++ b/Домашние задания/09. Идемпотентость и коммутативность API в HTTP и очередях.md
@@ -62,7 +62,9 @@
 ```kubectl port-forward service/kafka-ui 8080```
 ## Команда для запуска сервиса без сбора метрик
 
-```helm upgrade --install lotus ./lotus --values lotus/values.yaml --set metrics.serviceMonitor.enabled=false```
+```
+helm upgrade --install lotus ./lotus --values lotus/values.yaml --set metrics.serviceMonitor.enabled=false
+```
 
 ### стартуем тунель чтобы подключаться к нашему сервису локально
 
@@ -168,4 +170,74 @@ newman run OrderIdempotency.postman_collection.json --env-var "lotus=http://arch
 ```
 Результат запуска коллекции
 ```
+Otus with Order Idempotency
+
+→ profile/register
+  POST http://arch.homework/profile/register [201 Created, 333B, 1065ms]
+  ✓  Status code is 201
+  ✓  set email
+
+→ profile/login
+  POST http://arch.homework/profile/login [200 OK, 1.01kB, 113ms]
+  ✓  Status code is 200
+  ✓  set userId
+
+→ billing/add-money
+  POST http://arch.homework/billing/add-money?money=1000 [200 OK, 99B, 1012ms]
+  ✓  Status code is 200
+
+→ order/place
+  POST http://arch.homework/order/place?idSubscription=1 [202 Accepted, 199B, 35ms]
+  ✓  Status code is 202
+  ✓  set orderId
+
+→ order/place 2nd
+  POST http://arch.homework/order/place?idSubscription=1 [202 Accepted, 199B, 54ms]
+  ✓  Status code is 202
+  ✓  check orderId
+
+→ profile/register 2
+  POST http://arch.homework/profile/register [201 Created, 333B, 1009ms]
+  ✓  Status code is 201
+  ✓  set email
+
+→ profile/login 2
+  POST http://arch.homework/profile/login [200 OK, 1.01kB, 112ms]
+  ✓  Status code is 200
+  ✓  set userId
+
+→ billing/add-money 2
+  POST http://arch.homework/billing/add-money?money=1000 [200 OK, 99B, 1013ms]
+  ✓  Status code is 200
+
+→ order/place 2
+  POST http://arch.homework/order/place?idSubscription=2 [202 Accepted, 199B, 71ms]
+  ✓  Status code is 202
+  ✓  set orderId
+
+→ order/place new
+  POST http://arch.homework/order/place?idSubscription=1 [202 Accepted, 199B, 20ms]
+  ✓  Status code is 202
+  ✓  check orderId
+
+┌─────────────────────────┬─────────────────────┬────────────────────┐
+│                         │            executed │             failed │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│              iterations │                   1 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│                requests │                  10 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│            test-scripts │                  20 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│      prerequest-scripts │                  10 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│              assertions │                  18 │                  0 │
+├─────────────────────────┴─────────────────────┴────────────────────┤
+│ total run duration: 4.7s                                           │
+├────────────────────────────────────────────────────────────────────┤
+│ total data received: 2.04kB (approx)                               │
+├────────────────────────────────────────────────────────────────────┤
+│ average response time: 450ms [min: 20ms, max: 1065ms, s.d.: 469ms] │
+└────────────────────────────────────────────────────────────────────┘
+
 ```
