--- a/Проектная работа/Проектная работа.md
+++ b/Проектная работа/Проектная работа.md
@@ -1,8 +1,8 @@
 ## Запуск в minikube
 ### Подготовка инфры для запуска сервиса в minikube
-01. ```minikube start``` Стартуем minikube 
-02. ```minikube dashboard``` Запускаем дашборд кубера 
-03. ```minikube addons enable ingress``` Включаем ingress аддон от NGINX 
+01. ```minikube start``` Стартуем minikube
+02. ```minikube dashboard``` Запускаем дашборд кубера
+03. ```minikube addons enable ingress``` Включаем ingress аддон от NGINX
 04. ```minikube tunnel``` Стартуем тунель, чтобы подключаться к нашему сервису локально
 05. ```k get pods -n ingress-nginx``` Проверяем что ingress NGINX запустился
 06. ```alias k="minikube kubectl --"``` Для удобства создаем алиас для работы с kubectl
@@ -18,3 +18,367 @@
 16. http://arch.homework:8080 - открываем в браузере Kafka UI
 17. ```helm upgrade --install lotus ./helm/lotus --values helm/lotus/values.yaml``` Команда для запуска сервиса со сбором метрик, для запуска необходимо сначала поднять stack prometheus
 18. Дальше демо
+
+## Микросервисная архитектура серверной части интернет магазина
+
+
+### У каждого заказа есть состояния
+1. ValidatingBilling:
+   Заказ создан и ожидает проверки валидации от билинг системы.
+   Для пользователя заказ на этот момент считается как создан и не оплачен.
+2. ValidatingStock:
+   Заказ оплачен и ожидает установки резерва от сервиса склад
+   Для пользователя заказ на этот момент считается как оплачен,
+   но товара либо нет в наличии, либо система склада еще не обработала заказ.
+3. ValidatingDelivery:
+   Заказ уже подтвержден системой склад, но система доставки еще не обработала этот заказ.
+   Для пользователя заказ считается в статусе как ожидает передачи в курьерскую доставку.
+4. NotifyingSourceSystem:
+   Финальный статус: заказ обработала система доставки и передала в доставку.
+   Для пользователя заказ считается как в статусе доставка - пользователь ожидает получения.
+
+### ! На состояниях 1, 2, 3 заказ может быть отменен пользователем, но этот функционал пока что не реализован
+
+# Сценарии тестирования
+## 1. Беспрепятственный
+1. Пользователь регистрируется
+```
+POST /profile/register
+```
+Проверки:
+- Ожидаем 201 статус
+- копируем емейл пользоваталя в переменную Postman
+2. Пользователь авторизуется
+```
+POST /profile/login
+```
+Проверки:
+- использую емейл и пароль с предыдущего шага
+- Ожидаем 200 статус
+- копируем авторизационный токен пользователя в переменную Postman
+3. Пользователь пополняет баланс
+```
+POST /billing/add-money?money=1000
+```
+Для запроса используем токен, который был получен на 2-ом шаге
+
+Проверки:
+- Ожидаем 200 статус
+4. Пользователь оформляет заказ
+```
+POST /order/place?idSubscription=1
+```
+Для запроса используем токен, который был получен на 2-ом шаге
+
+Проверки:
+- Ожидаем 202 статус
+- копируем номер заказа {orderId} переменную Postman
+5. Пользователь читает список оповещений
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что заказ успешно отправлен в доставку
+
+## 2. Заказ товара, которого нет в наличии
+1. Пользователь регистрируется
+```
+POST /profile/register
+```
+Проверки:
+- Ожидаем 201 статус
+- копируем емейл пользоваталя в переменную Postman
+2. Пользователь авторизуется
+```
+POST /profile/login
+```
+Проверки:
+- использую емейл и пароль с предыдущего шага
+- Ожидаем 200 статус
+- копируем авторизационный токен пользователя в переменную Postman
+3. Пользователь пополняет баланс
+```
+POST /billing/add-money?money=1000
+```
+Для запроса используем токен, который был получен на 2-ом шаге
+
+Проверки:
+- Ожидаем 200 статус
+4. Пользователь оформляет заказ
+```
+POST /order/place?idSubscription=2
+```
+Для запроса используем токен, который был получен на 2-ом шаге
+
+Проверки:
+- Ожидаем 202 статус
+- копируем номер заказа {orderId} переменную Postman
+5. Заказ висит в статусе оплачен, но система склада его не обработала
+
+Прочитаем оповещения
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что заказ успешно оплачен
+6. Имитируем чтобы сервис склада сделал приемку товара (отдельным методом в АПИ)
+```
+GET /stock/add?idSubscription=2&count=1
+```
+Проверки:
+- Ожидаем 200 статус
+7. После приемки сервис склада пушит в сагу, что товар есть в наличии.
+
+8. Состояние саги меняется на следующий статус ждет обработку заказа сервис доставки
+9. Сервис доставки принимает запрос и моментально обрабатывает
+
+Прочитаем оповещения
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что заказ успешно отправлен в доставку
+##### Заказ запнулся на моменте обработке сервиса склада, а дальнейшая обработка после того как, сымитировали что сервис склада обработал заказа, проходит дальше бес препятствий
+
+## 3. Заказ товара, у пользователя нет денег, товара нет в наличии и доставка не принимает заказ
+1. Пользователь регистрируется
+```
+POST /profile/register
+```
+Проверки:
+- Ожидаем 201 статус
+- копируем емейл пользователя в переменную Postman
+2. Пользователь авторизуется
+```
+POST /profile/login
+```
+Проверки:
+- использую емейл и пароль с предыдущего шага
+- Ожидаем 200 статус
+- копируем авторизационный токен пользователя в переменную Postman
+3. Пользователь оформляет заказ
+```
+POST /order/place?idSubscription=3
+```
+Для запроса используем токен, который был получен на 2-ом шаге
+
+Проверки:
+- Ожидаем 202 статус
+- копируем номер заказа {orderId} переменную Postman
+
+4. Заказ висит в статусе не оплачен
+
+Прочитаем оповещения
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что не возможно оплатить заказ, не достаточно средств
+5. Пользователь пополняет баланс
+```
+POST /billing/add-money?money=1500
+```
+Для запроса используем токен, который был получен на 2-ом шаге
+
+Проверки:
+- Ожидаем 200 статус
+6. После пополнения баланса, система билинга видит не оплаченный заказ и снимает деньги со счета и отмечает заказ как оплаченный
+
+Прочитаем оповещения
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что заказ успешно оплачен
+7. Система склад получает заказ на обработку, но отвечает что, товара нет в наличии
+
+Имитируем чтобы сервис склада сделал приемку товара (отдельным методом в АПИ)
+```
+GET /stock/add?idSubscription=3&count=1
+```
+Проверки:
+- Ожидаем 200 статус
+8. После приемки сервис склада пушит в сагу, что товар есть в наличии.
+9. Состояние саги меняется на следующий статус ждет обработку заказа сервис доставки
+
+Прочитаем оповещения
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что заказ успешно зарезервирован
+10. Система доставки отвечает что, не может сейчас отправить заказ
+11. Имитируем, что сервис доставки принял заказ на доставки (отдельным методом в АПИ)
+```
+PUT /delivery/accept?idOrder={{lotusOrderId}}
+```
+Прочитаем оповещения
+```
+GET /notification
+```
+Проверки:
+- Ожидаем 200 статус
+- Проверяем что, последнее оповещение для пользователя о том, что заказ успешно передан в доставку
+
+##### Заказ запнулся на моменте обработке сервиса оплаты, склада и доставки, то есть ожидались получение событий, когда пользователь пополнит баланс, после ждали приемку от сервиса склада и в конце ждали когда сервис доставки примет заказ на доставку и отправит в курьерской службу
+
+Postman коллекция в этом папке
+Запустить коллекцию командой
+
+```
+newman run OrderSaga.postman_collection.json --env-var "lotus=http://arch.homework"
+```
+Результат запуска коллекции
+```
+newman
+
+Otus with order Saga
+
+→ profile/register
+  POST http://arch.homework/profile/register [201 Created, 350B, 1107ms]
+  ✓  Status code is 201
+  ✓  set email
+
+→ profile/login
+  POST http://arch.homework/profile/login [200 OK, 1.04kB, 138ms]
+  ✓  Status code is 200
+  ✓  set userId
+
+→ billing/add-money
+  POST http://arch.homework/billing/add-money?money=1000 [200 OK, 99B, 1020ms]
+  ✓  Status code is 200
+
+→ order/place
+  POST http://arch.homework/order/place?idSubscription=1 [202 Accepted, 199B, 73ms]
+  ✓  Status code is 202
+  ✓  set orderId
+
+→ notification
+  ┌
+  │ 'Sleeping for 3 seconds before next request.'
+  └
+  GET http://arch.homework/notification [200 OK, 1.02kB, 29ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+→ profile/register 2
+  POST http://arch.homework/profile/register [201 Created, 346B, 1033ms]
+  ✓  Status code is 201
+  ✓  set email
+
+→ profile/login 2
+  POST http://arch.homework/profile/login [200 OK, 1.03kB, 162ms]
+  ✓  Status code is 200
+  ✓  set userId
+
+→ billing/add-money 2
+  POST http://arch.homework/billing/add-money?money=1000 [200 OK, 99B, 1031ms]
+  ✓  Status code is 200
+
+→ order/place 2
+  POST http://arch.homework/order/place?idSubscription=2 [202 Accepted, 199B, 68ms]
+  ✓  Status code is 202
+  ✓  set orderId
+
+→ notification 2
+  ┌
+  │ 'Sleeping for 3 seconds before next request.'
+  └
+  GET http://arch.homework/notification [200 OK, 648B, 46ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+→ stock/add
+  PUT http://arch.homework/stock/add?idSubscription=2&count=1 [200 OK, 99B, 1026ms]
+  ✓  Status code is 200
+
+→ notification Copy
+  GET http://arch.homework/notification [200 OK, 1.02kB, 27ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+→ profile/register 3
+  POST http://arch.homework/profile/register [201 Created, 348B, 1054ms]
+  ✓  Status code is 201
+  ✓  set email
+
+→ profile/login 3
+  POST http://arch.homework/profile/login [200 OK, 1.03kB, 134ms]
+  ✓  Status code is 200
+  ✓  set userId
+
+→ order/place 3
+  POST http://arch.homework/order/place?idSubscription=3 [202 Accepted, 199B, 36ms]
+  ✓  Status code is 202
+  ✓  set orderId
+
+→ notification 4
+  ┌
+  │ 'Sleeping for 3 seconds before next request.'
+  └
+  GET http://arch.homework/notification [200 OK, 476B, 629ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+→ billing/add-money 3
+  POST http://arch.homework/billing/add-money?money=1500 [200 OK, 99B, 1050ms]
+  ✓  Status code is 200
+
+→ notification 3
+  ┌
+  │ 'Sleeping for 3 seconds before next request.'
+  └
+  GET http://arch.homework/notification [200 OK, 828B, 17ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+→ stock/add 3
+  PUT http://arch.homework/stock/add?idSubscription=3&count=1 [200 OK, 99B, 1033ms]
+  ✓  Status code is 200
+
+→ notification 4
+  ┌
+  │ 'Sleeping for 3 seconds before next request.'
+  └
+  GET http://arch.homework/notification [200 OK, 1.01kB, 29ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+→ delivery/accept
+  PUT http://arch.homework/delivery/accept?idOrder=5aeeed06-1468-48f7-86a8-309fd33baa5f [200 OK, 99B, 1018ms]
+  ✓  Status code is 200
+
+→ notification 4
+  ┌
+  │ 'Sleeping for 3 seconds before next request.'
+  └
+  GET http://arch.homework/notification [200 OK, 1.2kB, 70ms]
+  ✓  Status code is 200
+  ✓  Body matches string
+
+┌─────────────────────────┬─────────────────────┬────────────────────┐
+│                         │            executed │             failed │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│              iterations │                   1 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│                requests │                  22 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│            test-scripts │                  44 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│      prerequest-scripts │                  29 │                  0 │
+├─────────────────────────┼─────────────────────┼────────────────────┤
+│              assertions │                  38 │                  0 │
+├─────────────────────────┴─────────────────────┴────────────────────┤
+│ total run duration: 30.3s                                          │
+├────────────────────────────────────────────────────────────────────┤
+│ total data received: 8.17kB (approx)                               │
+├────────────────────────────────────────────────────────────────────┤
+│ average response time: 492ms [min: 17ms, max: 1107ms, s.d.: 472ms] │
+└────────────────────────────────────────────────────────────────────┘
+```
